# GpcalangTest

./: .gitmodules
gpcalang/: Cargo.toml  gpca.txt
gpcalang/src/: lib.rs  main.rs
gpcalang/src/entity/: mod.rs
gpcalang/src/new/: mod.rs
gpcalang/src/new/entity/: bytecode.rs  mod.rs
gpcalang/src/new/world/: boolmap.rs  mod.rs
gpcalang/src/new2/entity/: mod.rs
gpcalang/src/new2/world/: mod.rs
gpcalang/src/world/: mod.rs
gpcalang_test/: Cargo.toml  log.txt  main.py  template.txt  variables.txt
gpcalang_test/src/: app.rs  gpca.rs  main.rs
gpcalang_test/tests/test1/: log.txt
gpcalang_test/tests/test2/: info.txt  log.txt
gpcalang_test/tests/test3/: info.txt
