[package]
name = "gpcalang_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpcalang = { path = "../gpcalang", features = ["new2"] }
frappe = { path = "../frappe" }
frappe_core = { path = "../frappe/frappe_core" }
affogato = { path = "../frappe/affogato"}
winit = "0.30.5"
arc-swap = "1.7.1"
futures-signals = "0.3.34"
futures = "0.3.30"
crossbeam = "0.8.4"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
notosans = "0.1.0"
rand = "0.8.5"
